# apperture

./: .gitignore  CUSTOMER_SETUP_GUIDE.md  README.md  airflow.yml  apperture-staging.yml  apperture.yml  cdc.yml  docker-compose-dev.yml  docker-compose.yml  event_logs.yml  getenv.sh  kafka.yml  repo-creation.sh  update_envs.sh  update_envs_and_dependencies.sh
alertmanager/: .env.vault  Dockerfile  alert_manager.env  main.py  pyproject.toml
appy/backend/: Dockerfile  mongo.py  pyproject.toml  server.py  settings.py  vectorstore.py
appy/backend/repositories/: chat.py  document.py  knowledge.py
backend/: .defaults  .env.vault  Dockerfile  README.md  getenv.sh  main.py  pyproject.toml  run_all_mongo_migrations.sh  run_mongo_migrations.sh  server.py  settings.py
backend/ai/: text_to_sql.py
backend/authorisation/: __init__.py  controller.py  jwt_auth.py  models.py  oauth.py  oauth_client_factory.py  oauth_provider.py  router.py  service.py
backend/cache/: cache.py
backend/clickhouse/: __init__.py  clickhouse.py  clickhouse_client_factory.py
backend/clickhouse_migrations/: create.sql
backend/data_processor/clean/: cleaner.py  google_analytics_cleaner.py  mixpanel_analytics_cleaner.py
backend/data_processor/fetch/: google_analytics_4_fetcher.py  google_analytics_fetcher.py  report_timeframe.py
backend/data_processor/store/: mixpanel_network_graph_saver.py  network_graph_saver.py
backend/data_processor/strategies/: google_analytics_4_strategy.py  google_analytics_strategy.py  mixpanel_analytics_strategy.py  strategy_builder.py
backend/data_processor/transform/: mixpanel_network_graph_transformer.py  network_graph_transformer.py
backend/data_processor_queue/: __init__.py  queue.py  service.py
backend/domain/actions/: models.py  service.py
backend/domain/alerts/: models.py  service.py
backend/domain/apidata/: service.py
backend/domain/apperture_users/: models.py  service.py
backend/domain/apps/: models.py  service.py
backend/domain/cdc/: service.py
backend/domain/cleaned_data/: models.py  service.py
backend/domain/clickstream/: models.py  service.py
backend/domain/clickstream_event_properties/: models.py  service.py
backend/domain/common/: date_models.py  date_utils.py  filter_models.py  models.py  (+1 more)
backend/mongo/: document_response.py  mongo.py
backend/mongo_migrations/: 20230321160552_metric_filter.py  20230327170434_metric_timestamp_fix.py  adding_domain_to_apps.py
backend/repositories/: document.py
backend/static/: array.js.map
backend/tenants/: tenants_service.py
backend/tests/: conftest.py  test_default.py  test_google_analytics_cleaner.py  test_google_analytics_fetcher.py  test_network_graph_transformer.py  utils.py
backend/users/: models.py  service.py
backend/utils/: cdc_tables.py  mail.py  mssql_clickhouse_datatypes.py  mysql_clickhouse_datatypes.py  psql_clickhouse_datatypes.py
data_processor/: .dockerignore  .env.vault  Dockerfile  getenv.sh  main.py  main2.py  pyproject.toml  settings.py
data_processor/apperture/: backend_action.py
data_processor/clean/: amplitude_analytics_cleaner.py  google_analytics_cleaner.py  mixpanel_analytics_cleaner.py
data_processor/event_processors/: amplitude_event_processor.py  api_data_processor.py  clevertap_event_processor.py  event_processor.py  mix_panel_event_processor.py  mixpanel_event_processor.py
data_processor/fetch/: amplitude_events_fetcher.py  api_data_fetcher.py  clevertap_events_fetcher.py  data_orchestrator.py  event_fetcher.py  fetcher.py  google_analytics.py  google_analytics_4_fetcher.py  google_analytics_fetcher.py  mixpanel_analytics_fetcher.py  mixpanel_events_fetcher.py  notification_screenshot_fetcher.py
data_processor/store/: __init__.py  amplitude_network_graph_saver.py  api_data_saver.py  cleaned_data_saver.py  clickhouse.py  event_properties_saver.py  events_saver.py  ga_cleaned_data_saver.py  mixpanel_events_saver.py  mixpanel_network_graph_saver.py  network_graph_saver.py  notification_screenshot_saver.py  saver.py  transformed_data_saver.py
data_processor/strategies/: amplitude_event_processor.py  amplitude_events_strategy.py  api_data_strategy.py  clevertap_events_strategy.py  default_events.py  events_strategy_builder.py  google_analytics_4_strategy.py  google_analytics_strategy.py  mix_panel_event_processor.py  mixpanel_analytics_strategy.py  mixpanel_events_strategy.py  slack_notification_strategy.py  strategy.py  strategy_builder.py
data_processor/tenants/: types.py
data_processor/tests/: test_google_analytics_cleaner.py  test_google_analytics_fetcher.py  test_network_graph_transformer.py
data_processor/transform/: amplitude_network_graph_transformer.py  ga_new_rollup.py  mixpanel_network_graph_transformer.py  network_graph_transformer.py  transformer.py
event_logs_consumer_2/: Dockerfile  clickhouse.py  event_logs_datasources.py  pyproject.toml  server.py
event_logs_consumer_2/tests/: test_server.py
event_service_bus_consumer_producer/: Dockerfile  pyproject.toml  server.py
events_config_consumer/: Dockerfile  cache.py  events_config.py  pyproject.toml  server.py  settings.py
events_config_consumer/apperture/: backend_action.py
events_config_consumer/clickhouse/: clickhouse.py  clickhouse_client_factory.py
events_config_consumer/models/: models.py
events_consumer/: .env.vault  Dockerfile  clickhouse.py  clickhouse_client_factory.py  datasource_details.py  event_properties_saver.py  pyproject.toml  server.py
events_consumer/models/: models.py
events_consumer/tests/: test_clickhouse.py  test_clickstream.py  test_event_properties_saver.py  test_server.py
events_producer/: .env.vault  Dockerfile  events_producer.env  models.py  pyproject.toml  server.py
events_producer/static/: array.js
infra/: Pulumi.dev.yml  Pulumi.dev.yml.save  Pulumi.expected.yml  Pulumi.production.yml  Pulumi.staging.yml  Pulumi.yml  pyproject.toml  setup.sh
infra/src/: __main__.py  expected.py
scheduler/: .env.vault  Dockerfile  getenv.sh  pyproject.toml
scheduler_dashboard/: .dockerignore  .env.vault  Dockerfile  pyproject.toml
(+1020 files in other folders)
