[tool.poetry]
name = "events-consumer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "events_consumer"}]

[tool.poetry.dependencies]
python = "^3.9"
aiokafka = "^0.8.0"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
clickhouse-connect = "0.3.6"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
