[tool.poetry]
name = "events-producer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "events_producer"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.0"
aiokafka = "^0.8.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
